<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioClienteActivity">

    <!-- FONDO -->
    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/miImagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_descripcion"
        android:scaleType="centerCrop"
        android:src="@drawable/fon_img" />

    <View
        android:id="@+id/gradientOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:background="@drawable/gradient_overlay_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- TÍTULO -->

    <!-- FORMULARIO -->

    <ImageView
        android:id="@+id/iconoVolver"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:contentDescription="Flecha volver"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="247dp"
        android:layout_height="37dp"
        android:layout_marginTop="108dp"
        android:text="Nueva Inscripción"
        android:textColor="@color/white_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutFormulario"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_corners_white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo">

        <!-- Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:hint="Carlos"
            android:padding="8dp" />

        <!-- Apellido -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/label_apellido"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:hint="Sainz"
            android:padding="8dp" />

        <!-- Teléfono -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/label_telefono"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:hint="+54"
            android:inputType="phone"
            android:padding="8dp" />

        <!-- Dirección -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/label_direccion"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:hint="Brasil 333"
            android:padding="8dp" />

        <!-- Socio / No socio -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbSocio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_socio" />

            <CheckBox
                android:id="@+id/cbNoSocio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/checkbox_no_socio" />
        </LinearLayout>

        <!-- Subir foto -->
        <Button
            android:id="@+id/btnFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdesito"
            android:textColor="@color/dark_background"
            android:layout_marginTop="16dp"
            android:text="@string/btn_subir_foto" />

        <!-- Confirmar -->
        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:enabled="true"
            android:text="@string/btn_confirmar" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#66000000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
