<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmitirCarnetDosActivity">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/miImagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_descripcion"
        android:scaleType="centerCrop"
        android:src="@drawable/fon_img" />

    <!-- Emitir carnet -->


    <!-- Contenedor de buscador, boton y texto -->
    <TextView
        android:id="@+id/txtEmitirCarnet"
        android:layout_width="293dp"
        android:layout_height="76dp"
        android:layout_marginTop="76dp"
        android:text="Emitir Carnet"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconoVolver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:contentDescription="Flecha volver"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="339dp"
        android:layout_height="381dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324">

        <!-- Segundo contenedor -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Texto -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/buscar_instruccion"
                android:textAlignment="center"
                android:textSize="18sp" />

            <!-- Espaciado -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Buscador -->
            <AutoCompleteTextView
                android:id="@+id/autoCompletePersonas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Buscar persona"
                android:completionThreshold="1"
                android:padding="12dp"
                android:background="@android:drawable/editbox_background"
                android:textColor="#000"
                android:textSize="16sp"/>

            <!-- Espaciado -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Botón -->
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="#009688"
                android:enabled="true"
                android:textColor="@color/white"
                android:text="@string/confirmar" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
