<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroPagoActivity">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/miImagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_descripcion"
        android:scaleType="centerCrop"
        android:src="@drawable/fon_img" />

    <View
        android:id="@+id/gradientOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:background="@drawable/gradient_overlay_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iconoVolver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:contentDescription="Flecha volver"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Emitir carnet -->


    <!-- Contenedor de buscador, boton y texto -->

    <TextView
        android:layout_width="235dp"
        android:layout_height="42dp"
        android:layout_marginTop="108dp"
        android:text="Registro de pago"
        android:textColor="@color/white_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="339dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324">

        <!-- Segundo contenedor -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Texto -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/buscar_instruccion"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/dark_background"/>


            <!-- Espaciado -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Buscador -->
            <AutoCompleteTextView
                android:id="@+id/autoCompletePersonas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Buscar persona"
                android:completionThreshold="1"
                android:padding="12dp"
                android:background="@drawable/bg_edittext_transparent"
                android:textColor="@color/dark_background"
                android:textSize="16sp"/>


            <!-- Espaciado -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Botón -->
            <Button
                android:id="@+id/btnConfirmarBusqueda"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="@color/verdesito"
                android:text="@string/confirmar"
                android:textColor="@color/dark_background"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>




